Electron Beam Fix
Change-Id: I6caf0f4d74ec6b439ae9e9ac88f2c215a905cc62

Conflicts:
	common-overlay/frameworks/base/core/res/res/values/config.xml

--- a/common-overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common-overlay/frameworks/base/core/res/res/values/config.xml
@@ -224,7 +224,7 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
 
-    <!-- Force Screen off animation -->
+    <!-- If this is true, the screen will fade off. -->
     <bool name="config_animateScreenLights">false</bool>
 
 </resources>
