--- a/common-overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common-overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,6 +31,9 @@
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
 
+    <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
+    <bool name="config_unplugTurnsOnScreen">true</bool>
+
     <!-- Flag indicating whether the we should enable the automatic brightness in Settings.
          Software implementation will be used if config_hardware_auto_brightness_available is not set -->
     <bool name="config_automatic_brightness_available">true</bool>
@@ -221,7 +224,7 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
 
-    <!-- If this is true, the screen will fade off. -->
+    <!-- Force Screen off animation -->
     <bool name="config_animateScreenLights">false</bool>
 
 </resources>
